--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.2"
+    "mongoose": "^6.8.2",
+    "nodemailer": "^6.9.1",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
