--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon ./src/app.js",
-    "build": "babel ./src --out-dir build",
-    "start": "nodemon --exec babel-node ./build/app.js",
+    "build": "babel ./src -d build && docker build -t evaluation_api . && docker tag evaluation_api damiendrz/evaluation_api:latest  && docker push damiendrz/evaluation_api:latest",
+    "docker-start": "docker pull damiendrz/evaluation_api:latest && docker-compose up -d",
+    "start": "node ./build/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./src --fix",
     "lint:check": "eslint ./src",
@@ -35,10 +36,15 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
+    "@faker-js/faker": "^7.6.0",
     "util": "^0.12.5"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "babel-cli": "^6.26.0",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
